alignment fixed

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     filter: grayscale(1);
     justify-content: center;
     text-align: center;
-    margin: 70px;
+    margin-top: 10vh;
     transition: 0.3s ease;
     text-decoration: none;
     border: transparent;
